# fastapi-di-tpl

./: .coveragerc  .envrc.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: test.yaml  test.yml
.github/workflows/reusable/: build.yml
src/: containers.py  description.md  di_containers.py  main.py  main_container.py  settings.py
src/configs/: dev.yml  local.yml  prod.yml  stg.yml  test.yml
src/core/system/: containers.py  controllers.py
src/core/system/di_check/: containers.py  controllers.py  interfaces.py  schemas.py  services.py
src/core/system/di_config_checker/: containers.py  controllers.py  examples.py  interfaces.py  schemas.py  services.py
src/di_configs/: dev.yaml  local.yml  prd.yaml  prod.yml  stg.yml  test.yml
src/sections/system/: containers.py  controllers.py  di_containers.py  interfaces.py  schemas.py  services.py
src/sections/system/di_check/: containers.py  controllers.py  examples.py  interfaces.py  schemas.py  services.py
src/utils/: app_info.py  paths.py
tests/: conftest.py
tests/e2e/system/: test_apis.py
tests/unit/utils/: test_paths.py
