[tool.poetry]
name = "fastapi-di-tpl"
version = "0.1.0"
description = "FastAPI with Dependency Injector Template"
authors = ["devbruce <bruce93k@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"
fastapi = {extras = ["standard"], version = "~0.115.10"}
pydantic-settings = "~2.8.1"
dependency-injector = "~4.45.0"
loguru = "~0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "~8.3.4"
pytest-asyncio = "~0.25.3"
pytest-cov = "~6.0.0"
pytest-env = "~1.1.5"
pytest-mock = "~3.14.0"
pytest-xdist = {extras = ["psutil"], version = "~3.6.1"}
flake8-pyproject = "~1.2.3"
black = "~25.1.0"
isort = "~6.0.1"
mypy = "~1.15.0"
types-pyyaml = "~6.0.12.20240917"
pre-commit = "~4.1.0"
ipykernel = "~6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
enable_error_code = ["explicit-override"]
exclude = [
  ".venv",
]

[tool.black]
line-length = 120
target-version = ["py313"]
exclude = '''
(
  /(
    | \.venv
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
skip_glob = [
  ".venv/**",
]

[tool.flake8]
ignore = ["C901", "E501"]
max-line-length = 120
per-file-ignores = [
  "__init__.py:F401",
]
exclude = [
  ".venv",
]


[tool.pytest.ini_options]
markers = [
    "e2e: End-to-end test",
    "integration: Combined entity test",
    "unit: Single entity",
]
asyncio_mode = "auto"
pythonpath = [
  "src",
  "tests",
]
testpaths = [
  "tests",
]
addopts = [
  "--numprocesses=auto",
  "--disable-warnings",
  "--cov",
  "--cov-config=.coveragerc",
  "--cov-report=term",
  "--cov-report=xml",
]
env = [
    "APP_ENV=test",
]
