[project]
name = "fastapi-di-tpl"
version = "0.1.0"
description = "FastAPI with Dependency Injector Template"
readme = "README.md"
requires-python = ">=3.13, 3.14"
dependencies = [
    "dependency-injector>=4.48.1, <4.49",
    "fastapi[standard]>=0.116.1, <0.117",
    "loguru>=0.7.3, <0.8",
    "pydantic-settings>=2.10.1, <2.11",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5, <6.30",
    "mypy>=1.16.1, <1.17",
    "pre-commit>=4.2.0, <4.3",
    "pytest>=8.4.1, <8.5",
    "pytest-asyncio>=1.0.0, <1.1",
    "pytest-cov>=6.2.1, <6.3",
    "pytest-env>=1.1.5, <1.2",
    "pytest-mock>=3.14.1, <3.15",
    "pytest-xdist>=3.8.0, <3.9",
    "ruff>=0.12.3, <0.13",
    "types-pyyaml>=6.0.12.20250516, <6.1",
]

# ---------------------------------
# Type Checker
# ---------------------------------
[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
enable_error_code = ["explicit-override"]
exclude = [
  ".venv",
]

# ---------------------------------
# Formatter / Linter
# ---------------------------------
[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "F",  # flake
    "I",  # isort
]
ignore = ["C901", "E501"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------
# Test
# ---------------------------------
[tool.pytest.ini_options]
markers = [
    "e2e: End-to-end test",
    "integration: Combined entity test",
    "unit: Single entity",
]
asyncio_mode = "auto"
pythonpath = [
  "src",
  "tests",
]
testpaths = [
  "tests",
]
addopts = [
  "--numprocesses=auto",
  "--disable-warnings",
  "--cov",
  "--cov-config=.coveragerc",
  "--cov-report=term",
  "--cov-report=xml",
]
env = [
    "APP_ENV=test",
]
